fix auth style and update visibility bugs

--- a/frontend/src/app/components/auth/auth.component.css
+++ b/frontend/src/app/components/auth/auth.component.css
@@ -23,23 +23,21 @@ input.ng-touched.ng-valid {
   padding: 40px 40px;
 }
 
-@media (max-width: 480px), (max-height: 480px) {
+@media (max-width: 480px),
+(max-height: 480px) {
   .card-container.card {
     margin-bottom: 0px;
     margin-top: 0px;
   }
-
   .container {
-    padding: 0px;
-
+    padding: 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: 100vh;
   }
-
   .card-content {
-    padding: 0;
+    padding: 30px;
   }
 }
 
@@ -78,9 +76,9 @@ input.ng-touched.ng-valid {
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
-  -webkit-box-shadow: 0px 0px 10px rgba(0,0,0,.8);
-  -moz-box-shadow: 0px 0px 10px rgba(0,0,0,.8);
-  box-shadow: 0px 0px 10px rgba(0,0,0,.8);
+  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, .8);
+  -moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, .8);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, .8);
   /*-moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);*/
   /*-webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);*/
   /*box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);*/
@@ -160,9 +158,13 @@ input.ng-touched.ng-valid {
 }
 
 /*.btn.btn-signin:hover,*/
+
 /*.btn.btn-signin:active,*/
+
 /*.btn.btn-signin:focus {*/
-  /*background-color: rgb(12, 97, 33);*/
+
+/*background-color: rgb(12, 97, 33);*/
+
 /*}*/
 
 .forgot-password {
@@ -171,11 +173,11 @@ input.ng-touched.ng-valid {
 
 .forgot-password:hover,
 .forgot-password:active,
-.forgot-password:focus{
+.forgot-password:focus {
   color: rgb(12, 97, 33);
 }
 
-span.incorrect-input{
+span.incorrect-input {
   color: red;
 }
 
